--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-slideshow-image": "^4.2.0"
+    "react-dom": "18.2.0"
   }
 }
