--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,12 @@
 name: Build Pipeline
 
 on:
+  pull_request:
+    branches:
+      - '*'
   push:
-    branches: 
-    - '*'
+    branches:
+      - 'master'
 
 jobs:
   build:
