--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.2",
-    "sharp": "^0.32.0"
+    "sharp": "^0.32.0",
+    "typewriter-effect": "^2.19.0"
   }
 }
