--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
     "sharp": "^0.32.0",
     "typewriter-effect": "^2.19.0"
